--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luis Page</title>
+    <title>__TITULO__</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -33,30 +33,23 @@
         }
 
         #motivational-text {
+            max-width: 50%;
+            min-height: 150px;
+            max-height: 300px;
+            overflow-y: auto;
+            color: #E0E0E0;
+            white-space: pre-wrap;
+            word-wrap: break-word;
             font-style: italic;
-            color: #ffffff;
             font-size: 1.2rem;
             padding: 20px;
             border-radius: 15px;
             background-color: rgba(0, 0, 0, 0.5);
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
             text-align: left;
-            max-width: 90%;
-            min-width: 20%;
             margin: 20px auto;
             position: relative;
-            min-height: 150px;
-            overflow-y: auto;
-            line-height: 1.5;
-            cursor: none;
-        }
-
-        #motivational-text:not(:empty) {
             cursor: text;
-        }
-
-        #motivational-text:empty {
-            cursor: none;
         }
 
         #motivational-text::before {
@@ -130,10 +123,10 @@
     
     <div id="motivational-text">
         <div id="text-header">#!/bin/bash</div>
-        MOTIVATIONAL_TEXT_PLACEHOLDER
+        HOLDER
     </div>
 
-    <a href="https://github.com/luiscorreiaOps" target="_blank">GitHub</a>
-    <footer>© Luis Correia - Todos os direitos não reservados</footer>
+    <a href="__LUISCORREIAOPSGITHUB__" target="_blank">GitHub</a>
+    <footer>__CONTRAPE__</footer>
 </body>
 </html>
