--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
         .motivational-paragraph {
-            margin-top: 15px;
+            margin-top: -50px;
             padding: 0;
         }
 
@@ -128,7 +128,7 @@
     
     <div id="motivational-text">
         <div id="text-header">#!/bin/bash</div>
-        <p class="motivational-paragraph">HOLDER</p>
+        <p class="motivational-paragraph">__HOLDER__</p>
     </div>
 
     <a href="__LUISCORREIAOPSGITHUB__" target="_blank">GitHub</a>
