--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <p class="motivational-paragraph">__HOLDER__</p>
     </div>
 
-    <a href="__LUISCORREIAOPSGITHUB__" target="_blank">GitHub</a>
+    <a href="__LUISCORREIAOPSGITHUB__" target="_blank">Contact</a>
     <footer>__CONTRAPE__</footer>
 </body>
 </html>
