--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
             cursor: text;
         }
 
-
         .motivational-paragraph {
-            margin-top: -30px;
+            margin-top: -15px; 
             padding: 0;
         }
 
@@ -66,7 +65,6 @@
             color: #fff;
             animation: blink 1.2s step-start infinite;
         }
-
 
         #text-header {
             font-family: 'Courier New', monospace;
@@ -127,7 +125,7 @@
     <h1>Bem-vindo! - ¡Bienvenido! - Welcome!</h1>
     
     <div id="motivational-text">
-        <div id="text-header">#!/bin/bash</div>
+        <div id="text-header">#!/bin/bash__SH__</div>
         <p class="motivational-paragraph">__HOLDER__</p>
     </div>
 
