--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <h1>Bem-vindo! - ¡Bienvenido! - Welcome!</h1>
     
     <div id="motivational-text">
-        <div id="text-header">#!/bin/bash__SH__</div>
+        <div id="text-header">__SH__</div>
         <p class="motivational-paragraph">__HOLDER__</p>
     </div>
 
