--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             text-align: center;
             overflow: hidden;
             box-sizing: border-box;
-            position: relative;
         }
 
         h1 {
@@ -30,10 +29,12 @@
             transform: translateX(-50%);
             opacity: 0;
             animation: fadeIn 2s ease-out forwards;
+            white-space: nowrap;
         }
 
         #motivational-text {
-            max-width: 80%; 
+            max-width: 800px;
+            width: 90%;
             min-height: 100px;
             max-height: 400px;
             overflow-y: auto;
@@ -42,7 +43,7 @@
             word-wrap: break-word;
             font-style: italic;
             font-size: 1.1rem;
-            padding: 15px;
+            padding: 25px 15px 15px 15px;
             border-radius: 15px;
             background-color: rgba(0, 0, 0, 0.5);
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
@@ -53,12 +54,12 @@
         }
 
         .motivational-paragraph {
-            margin-top: 15px;
+            margin-top: -50px;
             padding: 0;
         }
 
         .motivational-paragraph::after {
-            content: '|';Media query para telas menores (até 768px) 
+            content: '|';
             color: #fff;
             animation: blink 1.2s step-start infinite;
         }
@@ -68,12 +69,11 @@
             font-size: 0.7rem;
             color: #777676;
             position: absolute;
-            top: 5px;
-            left: 10px;
-            width: calc(100% - 20px);
+            top: 9px;
+            left: 15px;
+            width: calc(100% - 30px);
             text-align: left;
             font-style: italic;
-            padding-left: 5px;
             z-index: 1;
         }
 
@@ -106,8 +106,8 @@
             transition: background 0.3s, color 0.3s;
             margin-top: 15px;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-            position: relative; 
-            margin-bottom: 30px; 
+            position: relative;
+            margin-bottom: 30px;
         }
 
         a:hover {
@@ -116,23 +116,30 @@
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
         }
 
-        /* celular-solution*/
+        /*celular-solution */
         @media (max-width: 768px) {
             h1 {
-                font-size: 2.5rem;
+                font-size: 2.2rem;
                 top: 15px;
             }
             #motivational-text {
-                margin-top: 100px; 
-                font-size: 1rem;
-                max-width: 90%;
+                margin-top: 100px;
+                font-size: 0.95rem;
+                max-width: 95%;
+                padding: 25px 10px 10px 10px;
             }
             .motivational-paragraph {
-                margin-top: 10px;
+                margin-top: 8px;
             }
             #text-header {
-                font-size: 0.6rem;
-                top: 3px;
+                font-size: 0.55rem;
+                top: 8px;
+                left: 10px;
+                width: calc(100% - 20px);
+            }
+            a {
+                padding: 0.6rem 1.1rem;
+                font-size: 0.8rem;
             }
         }
     </style>
